--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,54 @@
-type: 二楼自习室 #  二楼自习室/四楼自习室/自定义
+type: 自定义 #  二楼自习室/四楼自习室/自定义
 预约时间:
   周一:
-    启用: false
+    启用: true
     开始时间: 9
-    持续小时数: 1
+    持续小时数: 12
   周二:
-    启用: false
-    开始时间: 0
-    持续小时数: 0
+    启用: true
+    开始时间: 9
+    持续小时数: 12
   周三:
-    启用: false
-    开始时间: 0
-    持续小时数: 0
+    启用: true
+    开始时间: 9
+    持续小时数: 12
   周四:
-    启用: false
-    开始时间: 0
+    启用: true
+    开始时间: 9
     持续小时数: 0
   周五:
-    启用: false
-    开始时间: 0
-    持续小时数: 0
+    启用: true
+    开始时间: 9
+    持续小时数: 12
   周六:
-    启用: false
-    开始时间: 0
-    持续小时数: 0
+    启用: true
+    开始时间: 9
+    持续小时数: 12
   周日:
-    启用: false
-    开始时间: 0
-    持续小时数: 0
+    启用: true
+    开始时间: 9
+    持续小时数: 12
 自定义:
-    - 10000
-    - 10001
+    - 42103
+    - 42104
+    - 42107
+    - 42108
+    - 42111
+    - 42112
+    - 42115
+    - 42116
+    - 42119
+    - 42120
+    - 42123
+    - 42124
+    - 42127
+    - 42128
+    - 42131
+    - 42132
+    - 42135
+    - 42136
+    - 42139
+    - 42140
 
 # 3东：42101-42140
 # 3西：42141-42184
