--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-type: 四楼自习室 #  二楼自习室/四楼自习室/自定义
+type: 自定义 #  二楼自习室/四楼自习室/自定义
 预约时间:
   周一:
     启用: true
@@ -29,7 +29,7 @@ type: 四楼自习室 #  二楼自习室/四楼自习室/自定义
     开始时间: 9
     持续小时数: 12
 自定义:
-    - 28768
+    - 58889
 
 # 3东：42101-42140
 # 3西：42141-42184
